# cuvk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: cost.comp  cost.comp.spv  deform.comp  deform.comp.spv  eval.frag  eval.frag.spv  eval.geom  eval.geom.spv  eval.vert  eval.vert.spv
include/cuvk/: comdef.hpp  config.hpp  context.hpp  cuvk.h  executor.hpp  logger.hpp  pipeline.hpp  shader_interface.hpp  span.hpp  storage.hpp  workflow.hpp
python/: cubl.py  cubl_mp.py  cuvk.py  demo.py  plot.py
scripts/: Compile-Shaders.ps1  Run-Benchmark.ps1  Run-VariableBenchmark.ps1  Update-Distribution.ps1  Update-Spirv.ps1
src/cuvk/: context.cpp  cuvk.cpp  executor.cpp  logger.cpp  main.cpp  pipeline.cpp  storage.cpp  workflow.cpp
